Fixed overflow issue caused by animate.css.

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+body {
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
 .container-flex {
   display: flex;
   flex-direction: row;
